--- a/DonationClient/src/main/resources/donation/client/views/Email.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/Email.fxml
@@ -6,9 +6,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="184.0" prefWidth="317.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.EmailController">
+<AnchorPane prefHeight="184.0" prefWidth="317.0" style="-fx-padding: 10px;;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="donation.client.controllers.EmailController">
    <children>
-      <Label alignment="CENTER" layoutX="41.0" layoutY="21.0" prefHeight="29.0" prefWidth="390.0" text="Choose your email" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Label alignment="CENTER" layoutX="10.0" layoutY="27.0" prefHeight="29.0" prefWidth="390.0" text="Choose your email" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="27.0">
          <font>
             <Font name="Arial" size="20.0" />
          </font>
@@ -23,6 +23,6 @@
             <Font size="17.0" />
          </font>
       </JFXCheckBox>
-      <JFXButton fx:id="buttonDone" layoutX="253.0" layoutY="142.0" prefHeight="26.0" prefWidth="55.0" styleClass="btn" stylesheets="@../css/MainStyle.css" text="Done" />
+      <JFXButton fx:id="buttonDone" layoutX="137.0" layoutY="138.0" prefHeight="26.0" prefWidth="55.0" styleClass="btn" stylesheets="@../css/MainStyle.css" text="Done" />
    </children>
 </AnchorPane>
