--- a/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
+++ b/DonationClient/src/main/resources/donation/client/views/LoginView.fxml
@@ -31,7 +31,7 @@
                         <Font name="Roboto" size="16.0" />
                      </font>
                   </JFXPasswordField>
-                  <JFXButton fx:id="buttonLogin" layoutX="166.0" layoutY="529.0" onAction="#handleLogin" prefHeight="44.0" prefWidth="142.0" styleClass="btn" text="Login" textFill="#323232" AnchorPane.bottomAnchor="67.0" AnchorPane.leftAnchor="166.0" AnchorPane.rightAnchor="165.0">
+                  <JFXButton fx:id="buttonLogin" layoutX="166.0" layoutY="530.0" onAction="#handleLogin" prefHeight="44.0" prefWidth="142.0" styleClass="btn" text="Login" textFill="#323232" AnchorPane.bottomAnchor="73.0" AnchorPane.leftAnchor="166.0" AnchorPane.rightAnchor="165.0">
                      <font>
                         <Font size="18.0" />
                      </font>
@@ -39,12 +39,12 @@
                   <JFXTextField editable="false" focusColor="#34478000" layoutX="85.0" layoutY="450.0" mouseTransparent="true" prefHeight="25.0" prefWidth="300.0" unFocusColor="#4d4d4d00" AnchorPane.bottomAnchor="153.0" AnchorPane.leftAnchor="85.0" AnchorPane.rightAnchor="49.0" />
                   <FontAwesomeIconView fill="#323232" glyphName="USER" layoutX="50.0" layoutY="403.0" size="25" wrappingWidth="12.0" AnchorPane.bottomAnchor="232.9402904510498" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="411.0" />
                   <FontAwesomeIconView fill="#323232" glyphName="KEY" layoutX="50.0" layoutY="475.0" size="25" wrappingWidth="12.0" AnchorPane.bottomAnchor="160.9402904510498" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="411.0" />
-                  <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="588.0" onAction="#handleRegistration" text="Want to donate? Create new account." AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0">
+                  <Hyperlink alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="596.0" onAction="#handleRegistration" text="Want to donate? Create new account." AnchorPane.bottomAnchor="19.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0">
                <font>
                   <Font name="Saira SemiCondensed Medium" size="18.0" />
                </font></Hyperlink>
             </AnchorPane>
-            <AnchorPane id="RegistrationWindow" fx:id="anchorPaneRegistration" prefHeight="745.0" prefWidth="473.0">
+            <AnchorPane id="RegistrationWindow" fx:id="anchorPaneRegistration" prefHeight="745.0" prefWidth="473.0" visible="false">
                   <Label alignment="CENTER_RIGHT" layoutY="-8.0" prefHeight="99.0" prefWidth="473.0" styleClass="h1" text="New Account" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                   <VBox layoutY="84.0" prefHeight="517.0" prefWidth="473.0" spacing="30.0" AnchorPane.bottomAnchor="31.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="84.0">
                <HBox spacing="30.0">
